cert-manager/Grafana-Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: prometheus
spec:
  selector:
    istio: ingressgateway  # Use Istio's ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - grafana.centralhub.me
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - grafana.centralhub.me
    tls:
      mode: SIMPLE
      credentialName: cred_name #Update with your cred name.
